tests/negative/gold/super5_test.gold
tests/negative/super5_test.toit:8:5: error: Can't access 'super' in factory method
    super
    ^~~~~
tests/negative/super5_test.toit:9:5: error: Unresolved identifier: 'unresolved2'
    unresolved2
    ^~~~~~~~~~~
tests/negative/super5_test.toit:5:5: error: Can't access 'super' in static method
    super
    ^~~~~
tests/negative/super5_test.toit:6:5: error: Unresolved identifier: 'unresolved1'
    unresolved1
    ^~~~~~~~~~~
Compilation failed.
